<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    android:alignmentMode="alignBounds"
    tools:context="com.dazzlinghelios.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_columnSpan="2"
        android:text="@string/title"
        android:textSize="25sp"
        android:textColor="@color/titleColor"/>

    <Button
        style="@style/ButtonTheme"
        android:id="@+id/button1"
        android:layout_gravity="start|fill"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/b1_title"
        android:background="@color/buttonBackground"/>

    <Button
        style="@style/ButtonTheme"
        android:id="@+id/button2"
        android:layout_gravity="end|clip_horizontal"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/b2_title"
        android:background="@color/buttonBackground"/>

    <Button
        style="@style/ButtonTheme"
        android:id="@+id/button3"
        android:layout_gravity="start|fill"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/b3_title"
        android:background="@color/buttonBackground"/>

    <Button
        style="@style/ButtonTheme"
        android:id="@+id/button4"
        android:layout_gravity="end|clip_horizontal"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/b4_title"
        android:background="@color/buttonBackground"/>

    <Button
        style="@style/ButtonTheme"
        android:id="@+id/button5"
        android:layout_gravity="start|fill_horizontal"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/b5_title"
        android:background="@color/buttonBackground"/>

    <Button
        style="@style/ButtonTheme"
        android:id="@+id/button6"
        android:layout_gravity="end|clip_horizontal"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/b6_title"
        android:background="@color/buttonBackground"/>
</GridLayout>
